# home_automation_api

./: .gitignore  README.md  app.py  docker-compose.yml  homeAutomation.service  local_app.py  pyproject.toml  requirements.txt  requirements_test.txt  run_all_tests.sh  settings.development.json  settings.production.json  startService.sh  testServerSender.py  test_requirements.txt  wsgi.ini  wsgi.py
.github/: copilot-instructions.md
deployment/: homeAutomation.service  startService.sh  wsgi.ini
docker/flyway/local_testdata/: V1000__add_test_data.sql  V1001__add_test_data.sql
docker/flyway/migration/: V1.11__allow_multiple_roles.sql  V1.20__add_test_data.sql  (+12 more)
svc/: manager.py
svc/config/: security_headers_middleware.py  settings_state.py  singleton.py
svc/constants/: home_automation.py  lights_state.py  settings_base.py  settings_state.py
svc/controllers/: account_controller.py  app_controller.py  devices_controller.py  garage_door_controller.py  light_controller.py  scene_controller.py  sump_controller.py  thermostat_controller.py
svc/endpoints/: account_routes.py  app_routes.py  device_routes.py  garage_door_routes.py  light_routes.py  scene_routes.py  sump_routes.py  thermostat_routes.py
svc/models/: garage.py  sump.py  thermostat.py
svc/routes/: account_routes.py  app_routes.py  device_routes.py  garage_door_routes.py  light_routes.py  scene_routes.py  sump_routes.py  thermostat_routes.py
svc/services/: light_service.py  temperature.py  weather_request.py
svc/utilities/: api_utils.py  event_client.py  event_utils.py  file_utils.py  gpio_utils.py  hvac_utils.py  jwt_utils.py  light_utils.py  rabbitmq_client.py  string_utils.py  test.py  user_garage_utils.py  user_temp_utils.py
test/integration/: __init__.py  test_account_routes_integration.py  test_app_routes_integration.py  test_db_integration.py  test_device_routes_integration.py  test_file_utils.py  test_garage_routes_integration.py  test_light_routes_integration.py  test_scene_routes_integration.py  test_sump_routes_integration.py  test_thermostat_routes_integration.py
(+35 files in other folders)
