[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "home-automation-api"
version = "1.0.0"
description = "A centralized home automation project API server.  Interfaces with other microservices to provide a unified home automation experience."
authors = [
    { name = "Jon Graf", email = "jgraf@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==2.1.2",
    "PyJWT==1.7.1",
    "SQLAlchemy==1.3.22",
    "pytz==2020.4",
    "psycopg2==2.8.6",
    "flask_cors==3.0.9",
    "requests==2.25.1",
    "yoyo-migrations==7.2.1",
    "uwsgi==2.0.19.1",
    "RPi.GPIO==0.7.0"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.1",
    "mock==3.0.5",
    "pytest-pylint==0.6.0",
    "pylint==1.7.1"
]

[tool.setuptools.packages.find]
where = ["svc"]
include = ["svc*"]

[tool.pytest.ini_options]
testpaths = ["test/unit", "test/integration"]
addopts = "--strict-markers"



